[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/ui/championship/dashboard/Dashboard.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/airbroomball_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/background/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Confetti.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/font/DSEG7ClassicMini-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/broomballcoin.png" type="Texture" id=6]
[ext_resource path="res://src/ui/championship/dashboard/table/Table.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/ui/championship/dashboard/final-stage/FinalStage.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/ui/championship/dashboard/group-stage/GroupStage.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/FadeEffect.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 84
font_data = ExtResource( 5 )

[node name="Dashboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="FadeEffect" parent="." instance=ExtResource( 10 )]
node_path = NodePath("../Content")

[node name="Confetti" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Content" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Table" parent="Content" instance=ExtResource( 7 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 3.05176e-05
margin_top = -216.0
margin_right = 3.05176e-05
margin_bottom = -216.0

[node name="GroupStage" parent="Content" instance=ExtResource( 9 )]
visible = false

[node name="FinalStage" parent="Content" instance=ExtResource( 8 )]
visible = false
margin_left = 46.5452
margin_top = 13.7278
margin_right = 46.5452
margin_bottom = 13.7278

[node name="Buttons" type="VBoxContainer" parent="Content"]
anchor_left = 0.042
anchor_top = 0.593
anchor_right = 0.958
anchor_bottom = 0.944
margin_left = -0.240002
margin_top = -0.0400391
margin_right = 0.239929
margin_bottom = -0.320068
theme = ExtResource( 2 )
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NextMatch" type="Button" parent="Content/Buttons"]
margin_right = 659.0
margin_bottom = 95.0
text = "PLAY"

[node name="HBoxContainer" type="HBoxContainer" parent="Content/Buttons"]
margin_top = 107.0
margin_right = 659.0
margin_bottom = 235.0

[node name="BroomballCoins" type="TextureRect" parent="Content/Buttons/HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 6 )

[node name="PrizeMoney" type="Label" parent="Content/Buttons/HBoxContainer"]
margin_left = 132.0
margin_top = 22.0
margin_right = 408.0
margin_bottom = 106.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "1000"
align = 1

[node name="NewChampionship" type="Button" parent="Content/Buttons"]
margin_top = 247.0
margin_right = 659.0
margin_bottom = 342.0
text = "START_NEW"

[node name="GoBack" type="Button" parent="Content/Buttons"]
margin_top = 354.0
margin_right = 659.0
margin_bottom = 449.0
text = "MENU"

[node name="Matchday" type="Label" parent="Content"]
anchor_left = 0.365
anchor_top = 0.031
anchor_right = 0.607
anchor_bottom = 0.074
margin_left = 0.199982
margin_top = 0.320007
margin_right = 99.96
margin_bottom = 32.28
rect_scale = Vector2( 0.635103, 0.635103 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1/9"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NewLeaguePopUp" type="Popup" parent="."]
margin_left = 64.0
margin_top = 316.0
margin_right = 668.0
margin_bottom = 857.0

[node name="Panel" type="Panel" parent="NewLeaguePopUp"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Cancel" type="Button" parent="NewLeaguePopUp"]
margin_left = 75.95
margin_top = 412.0
margin_right = 223.95
margin_bottom = 506.0
text = "NO"

[node name="Okay" type="Button" parent="NewLeaguePopUp"]
margin_left = 384.0
margin_top = 412.0
margin_right = 543.0
margin_bottom = 506.0
text = "YES"

[node name="Label" type="Label" parent="NewLeaguePopUp"]
margin_left = 16.0
margin_top = 28.0
margin_right = 595.0
margin_bottom = 373.0
text = "WARNING_NEW"

[connection signal="pressed" from="Content/Buttons/NextMatch" to="." method="_on_NextMatch_pressed"]
[connection signal="pressed" from="Content/Buttons/NewChampionship" to="." method="_on_NewChampionship_pressed"]
[connection signal="pressed" from="Content/Buttons/GoBack" to="." method="_on_GoBack_pressed"]
[connection signal="pressed" from="NewLeaguePopUp/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="NewLeaguePopUp/Okay" to="." method="_on_Okay_pressed"]
